# FCG

01-text-editor-start/: CMakeLists.txt  README.md
01-text-editor-start/src/: main_text_echo.cpp  main_text_editor.cpp
02-draw-shapes-template/: my_drawing.cpp
03-block-breaker-template/: CMakeLists.txt  blockbreaker.cpp
04-opengl-hellotriangle-template/: CMakeLists.txt  hello_gl.cc
04_opengl-hello-triangle_stages_partial/: 00_hello-gl.cc  01_hello-triangle.cc  02_refactor.cc  03_fragment.frag  03_hotshaders.cc  03_hotshaders.hh  03_vertex.vert  04_uniforms.cc  CMakeLists.txt  hotshaders.hh
CODICE/: main_event_callback_text.cpp  main_shape.cpp  main_sprite.cpp  main_star.cpp
PROVA/: CMakeLists.txt  my_drawing.cpp
